# UniversalFakeDetect

./: .gitignore  .gitmodules  Makefile  dataset_paths.py  earlystop.py  pyproject.toml  train.py  validate.py  validate_dino.py
data/: __init__.py  datasets.py
elsa/: dataset_base.py  elsa.py
environments/: Dockerfile
environments/gpu/: docker-compose.yaml
models/: __init__.py  clip_models.py  deit_models.py  dinov2_models.py  ensemble_models.py  imagenet_models.py  meru_models.py  open_clip_models.py  open_clip_models_e31.py  open_clip_models_e32.py  resnet.py  stablerep_models.py  synclr_models.py  vgg.py  vision_transformer.py  vision_transformer_misc.py  vision_transformer_utils.py
models/clip/: clip.py  model.py
models/meru/: distributed.py  meru.py  text_encoders.py  utils.py
models/synclr/: attention.py  vision_transformer_synclr.py
networks/: base_model.py  lpf.py  trainer.py
options/: base_options.py  test_options.py  train_options.py
visualization/: attention_map.py  clip_attention_map.py  dimension_reduction.py  extract_features.py  visualize_plot.py
visualization/umap/: realfake_dataset_umap.py
