[tool.poetry]
name = "universalfakedetect"
version = "0.1.0"
description = ""
authors = ["Hina39 <hiinyan3939@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.2.2"
torchvision = "^0.17.2"
scikit-learn = "<=1.4.2"
tqdm = "^4.66.2"
ftfy = "^6.2.0"
regex = "^2023.12.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
