[tool.poetry]
name = "universalfakedetect"
version = "0.1.0"
description = ""
authors = ["Hina39 <hiinyan3939@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
torchvision = "^0.17.2"
scikit-learn = "<=1.4.2"
tqdm = "^4.66.2"
ftfy = "^6.2.0"
regex = "^2023.12.25"
requests = "^2.31.0"
datasets = "^2.18.0"
matplotlib = "<=3.8.4"
gradio = "^4.27.0"
tensorboardx = "^2.6.2.2"
opencv-python = "^4.9.0.80"
clip = {git = "https://github.com/mhamilton723/CLIP.git"}
torch = "<=2.2.2"
hydra-core = "^1.3.2"
timm = "^0.9.16"
tensorboard = "^2.16.2"
dash = "^2.17.0"
dash-bootstrap-components = "^1.6.0"
umap = "^0.1.1"
umap-learn = "^0.5.6"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.3.7"
mdformat-gfm = "^0.3.6"
mdformat-frontmatter = "^2.0.8"
mdformat-footnote = "^0.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
